# _2019_nCoV_infection_prediction

./: CMakeLists.txt  README.md  infected_numbers.txt  infected_numbers2.txt  main.cpp
cmake_modules/: FindG2O.cmake
include/_2019_nCoV_infection_prediction/: curve_fitting_cost.h  curve_fitting_edge.h  curve_fitting_vertex.h  display_figure.h
src/: display_figure.cpp  main.cpp
